--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "scripts": {
-    "start": "snowpack dev",
+    "start": "concurrently \"snowpack dev\" \"wait-on http://localhost:8080 && electron ./electron/main.js\"",
     "build": "snowpack build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
+    "@snowpack/plugin-dotenv": "^2.2.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/plugin-typescript": "^1.2.1",
     "@snowpack/plugin-webpack": "^3.0.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/snowpack-env": "^2.3.4",
+    "concurrently": "^8.2.0",
     "snowpack": "^3.3.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "wait-on": "^7.0.1"
   },
   "dependencies": {
+    "electron": "^25.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
